@@ -7,6 +7,7 @@
 #define PH_VERIFY_DEFAULT_SIZE_LIMIT (32 * 1024 * 1024)
 
 #define PH_VERIFY_PREVENT_NETWORK_ACCESS 0x1
+#define PH_VERIFY_VIEW_PROPERTIES 0x2
 
 typedef struct _PH_VERIFY_FILE_INFO
 {
@@ -16,6 +17,8 @@ typedef struct _PH_VERIFY_FILE_INFO
     ULONG FileSizeLimitForHash; // 0 for PH_VERIFY_DEFAULT_SIZE_LIMIT, -1 for unlimited
     ULONG NumberOfCatalogFileNames;
     PWSTR *CatalogFileNames;
+
+    HWND hWnd; // for PH_VERIFY_VIEW_PROPERTIES
 } PH_VERIFY_FILE_INFO, *PPH_VERIFY_FILE_INFO;
 
 NTSTATUS PhVerifyFileEx(
